<resources>
    <string name="app_name">Corona</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_reports">Reports</string>
    <string name="title_trustchain">Trustchain</string>
    <string name="title_encounters">Encounters</string>
    <string name="title_encounter_details">Encounter</string>
    <string name="title_trustchain_peers">Peers</string>
    <string name="title_trustchain_blocks">Blocks</string>
    <string name="home_encounters_subtext_check">Scanning, made %1$d digital handshakes with %2$d contacts!</string>
    <string name="home_encounters_subtext_warning">DP3T proximity tracing is turned off in settings.</string>
    <string name="home_reports_subtext_check">Nothing interesting to report!</string>
    <string name="home_reports_subtext_warning">You have been in contact with a diagnosed person on %1$d occasions in the last %2$d days. Please quarantine yourself!</string>
    <string name="home_trustchain_subtext_check">Trustchain P2P network enabled, you have %1$d peer(s) in the network and found %2$d blocks!</string>
    <string name="home_trustchain_subtext_warning">Trustchain P2P network is turned off in settings.</string>
    <string name="loading_view_reload">"Reload"</string>
    <string name="loading_view_error_title">"Error"</string>
    <string name="force_update_title">"Update required"</string>
    <string name="inform_continue_button">"Continue"</string>
    <string name="inform_send_button_title">"Send anonymous report"</string>
    <string name="inform_send_thankyou">"Thank you"</string>
    <string name="inform_send_thankyou_text">"You have reported your positive test anonymously via the app.

Thank you for helping to contain the spread of the coronavirus."</string>
    <string name="inform_fertig_button_title">"Close"</string>
    <string name="handshakes_title_homescreen">"Encounters"</string>
    <string name="tab_theapp_title">"The App"</string>
    <string name="cancel">"Cancel"</string>
    <string name="push_exposed_title">"Possible exposure"</string>
    <string name="push_exposed_text">"Open the Corona app reports to see more information"</string>
    <string name="android_button_permission_location">"Permit localisation"</string>
    <string name="android_button_ok">"Ok"</string>
    <string name="onboarding_continue_button">"Continue"</string>
    <string name="onboarding_finish_button">"Finish"</string>
    <string name="unexpected_error_title">"An unexpected error has occurred"</string>
    <string name="bluetooth_turned_off">"The app is not working because Bluetooth is switched off"</string>
    <string name="bluetooth_permission_turned_off">"The app is not working because Bluetooth is not permitted"</string>
    <string name="NSBluetoothPeripheralUsageDescription">"Encounters will be recognised in the background via low energy Bluetooth."</string>
    <string name="NSBluetoothAlwaysUsageDescription">"Encounters will be recognised in the background via low energy Bluetooth."</string>
    <string name="android_foreground_service_notification_text">"Encounters will be registered anonymously on your device."</string>
    <string name="inform_code_title">"Enter the Covidcode"</string>
    <string name="inform_code_text">"Enter the Covidcode sent to you."</string>
    <string name="inform_code_no_code">"Do you need help?"</string>
    <string name="tracing_setting_title">"Tracing"</string>
    <string name="tracing_setting_text">"Allow anonymous tracing"</string>
    <string name="bluetooth_setting_tracking_inactive">"Tracing deactivated"</string>
    <string name="bluetooth_setting_data_explanation_title">"Are my data secure?"</string>
    <string name="bluetooth_setting_tracking_explanation_text2">"An encounter with another user is only saved locally on your smartphone."</string>
    <string name="reports_title_homescreen">"Reports"</string>
    <string name="meldungen_no_meldungen_title">"No reports"</string>
    <string name="push_deactivated_title">"Messages deactivated"</string>
    <string name="push_deactivated_text">"Change the settings to receive information directly in the event of a report."</string>
    <string name="meldungen_meldung_title">"Possible infection"</string>
    <string name="meldungen_meldung_text">"An infection is suspected."</string>
    <string name="tracing_active_title">"Tracing active"</string>
    <string name="tracing_active_text">"Encounters will be registered anonymously."</string>
    <string name="android_tracing_error_title">"Tracing not active"</string>
    <string name="android_foreground_service_notification_errors">"App currently unable to function properly"</string>
    <string name="android_foreground_service_notification_error_network_sync">"An error occurred when loading the data"</string>
    <string name="android_foreground_service_notification_error_location_permission">"For the app to use Bluetooth, you must enable your location to be used. The app itself does not recognise your location at any time."</string>
    <string name="android_foreground_service_notification_error_battery_optimization">"For tracing to work precisely, the app must also run in the background. This will cause a minor increase in battery usage."</string>
    <string name="preview_warning_title">"Version preview"</string>
    <string name="preview_warning_text">"This app provides a preview of how the DP-*T works. It is not a functioning COVIS-19 tracer."</string>
    <string name="debug_settings_title">"Debug settings"</string>
    <string name="debug_state_setting_title">"Overwrite app status"</string>
    <string name="debug_state_setting_text">"This setting overwrites the app's visual status. Tracing functionality remains unaffected."</string>
    <string name="debug_state_setting_option_none">"No overwrite"</string>
    <string name="debug_state_setting_option_ok">"Healthy"</string>
    <string name="debug_state_setting_option_exposed">"Contact has tested positive"</string>
    <string name="debug_state_setting_option_infected">"Reported yourself as positive"</string>
    <string name="debug_sdk_state_title">"SDK status"</string>
    <string name="debug_sdk_state_text">"Current status of DP-3T SDK"</string>
    <string name="debug_sdk_state_last_synced">"Last synchronisation"</string>
    <string name="debug_sdk_state_self_exposed">"Reported yourself"</string>
    <string name="debug_sdk_state_contact_exposed">"Contact reported"</string>
    <string name="debug_sdk_state_number_handshakes">"Number of handshakes"</string>
    <string name="debug_sdk_state_boolean_true">"Yes"</string>
    <string name="debug_sdk_state_boolean_false">"No"</string>
    <string name="debug_sdk_button_reset">"Reset SDK"</string>
    <string name="android_debug_sdk_reset_text">"The local SDK status has been reset."</string>
    <string name="tab_tracing_title">"Tracing"</string>
    <string name="whattodo_title_positivetest">"you test positive"</string>
    <string name="whattodo_subtitle_positivetest">"What to do if …"</string>
    <string name="inform_detail_subtitle">"What to do if …"</string>
    <string name="inform_detail_title">"you test positive?"</string>
    <string name="inform_detail_box_subtitle">"With the Covidcode"</string>
    <string name="inform_detail_box_title">"Send an anonymous report"</string>
    <string name="inform_detail_box_button">"Enter the Covidcode"</string>
    <string name="inform_detail_box_text">"Use the Covidcode sent to you to report the test anonymously in the app."</string>
    <string name="symptom_detail_subtitle">"What do I do if …"</string>
    <string name="symptom_detail_title">"I feel ill?"</string>
    <string name="symptom_detail_box_subtitle">"In the case of symptoms ..."</string>
    <string name="symptom_detail_box_title">"Contact your doctor"</string>
    <string name="symptom_detail_box_button">"To the coronavirus check"</string>
    <string name="symptom_detail_box_text">"If you have possible coronavirus symptoms, contact your doctor or the medical emergency service."</string>
    <string name="inform_detail_navigation_title">"Tested positive"</string>
    <string name="symptom_detail_navigation_title">"Symptoms"</string>
    <string name="tracing_turned_off_title">"Tracing deactivated"</string>
    <string name="tracing_turned_off_text">"Activate tracing so that the app works."</string>
    <string name="bluetooth_turned_off_title">"Bluetooth off"</string>
    <string name="bluetooth_turned_off_text">"Switch on Bluetooth on your device so that anonymous tracing works."</string>
    <string name="bluetooth_turn_on_button_title">"Switch on Bluetooth"</string>
    <string name="bluetooth_permission_error_title">"Bluetooth use declined"</string>
    <string name="bluetooth_permission_error_text">"Enable the use of Bluetooth so that anonymous tracing works."</string>
    <string name="symptom_detail_corona_check_url">"https://check.bag-coronavirus.ch/screening"</string>
    <string name="push_open_settings_button">"Change settings"</string>
    <string name="meldungen_no_meldungen_subtitle">"No potential infections have been reported"</string>
    <string name="no_meldungen_box_title">"Protect yourself"</string>
    <string name="no_meldungen_box_subtitle">"What should I do?"</string>
    <string name="no_meldungen_box_text">"Follow the government recommendations on hygiene and social distancing."</string>
    <string name="meldung_detail_positive_tested_title">"Tested positive"</string>
    <string name="meldung_detail_positive_tested_subtitle">"You have tested positive for the  new coronavirus."</string>
    <string name="meldung_detail_positive_test_box_subtitle">"What do I have to do?"</string>
    <string name="meldung_detail_positive_test_box_title">"Self-isolation"</string>
    <string name="meldung_detail_positive_test_box_text">"Follow the instructions on self-isolation."</string>
    <string name="tracing_ended_title">"Tracing ended"</string>
    <string name="tracing_ended_text">"No further encounters registered"</string>
    <string name="exposed_info_contact_hotline">"Contact the"</string>
    <string name="meldung_homescreen_positive_info_line1">"Follow the"</string>
    <string name="meldung_homescreen_positive_info_line2">"Instructions on self-isolation"</string>
    <string name="meldung_detail_exposed_new_meldung">"New report"</string>
    <string name="meldung_detail_exposed_title">"Potential infection"</string>
    <string name="meldung_homescreen_positiv_title">"Tested positive"</string>
    <string name="meldung_detail_exposed_subtitle">"Potential infection suspected"</string>
    <string name="meldung_homescreen_positiv_text">"You have tested positive for the  new coronavirus."</string>
    <string name="reset_onboarding">"Reset onboarding"</string>
    <string name="date_today">"Today"</string>
    <string name="date_days_ago">"{COUNT} days ago"</string>
    <string name="meldungen_detail_whattodo">"What should I do?"</string>
    <string name="meldungen_detail_call">"Call us"</string>
    <string name="meldungen_detail_call_text">"Coronavirus infoline (24hrs-a-day)"</string>
    <string name="meldungen_detail_call_button">"Call now"</string>
    <string name="meldungen_detail_explanation_title">"Be careful!"</string>
    <string name="meldungen_detail_explanation_text1">"You could be infectious without realising it."</string>
    <string name="meldungen_detail_explanation_text2">"Please protect your family, your friends and those around you. Avoid contacts for up to 10 days after a possible infection."</string>
    <string name="meldungen_detail_guard_others">"Protect other people"</string>
    <string name="title_trustchain_peers_message">Message Peer</string>
    <string name="trustchain_peers_message_hint">Write message...</string>
    <string name="trustchain_peers_message_send_button">Send Toast</string>
</resources>